@@ -88,7 +88,7 @@ public class TestBeanPropertyLink extends TestCase {
 
   public void testSelectedItemBeanPropertyLink() throws Exception {
     final JComboBox box = new JComboBox(new String[] {"b", "d", "s"});
-    new SelectedItemBeanPropertyLink(box, this, "selectedItem", String.class, evtSelectedItemChanged, "");
+    new SelectedItemBeanPropertyLink(box, this, "selectedItem", String.class, evtSelectedItemChanged, null);
     assertNull("selected item should be null", getSelectedItem());
     setSelectedItem("s");
     assertEquals("selected item should be 's'", "s", box.getSelectedItem());
