@@ -41,7 +41,7 @@ public class TestEntityPropertyLink extends TestCase {
   public void testIntegerPropertyLink() {
     final IntField txt = new IntField();
     new IntTextPropertyLink(model, EntityRepository.get().getProperty(EmpDept.T_EMPLOYEE, EmpDept.EMPLOYEE_ID),
-            txt, "", true, LinkType.READ_WRITE, null);
+            txt, true, LinkType.READ_WRITE, null);
     assertNull("Initial Integer value should be null", model.getValue(EmpDept.EMPLOYEE_ID));
     txt.setInt(42);
     assertEquals("Integer value should be 42.2", new Integer(42), model.getValue(EmpDept.EMPLOYEE_ID));
@@ -53,7 +53,7 @@ public class TestEntityPropertyLink extends TestCase {
   public void testDoublePropertyLink() {
     final DoubleField txt = new DoubleField();
     new DoubleTextPropertyLink(model, EntityRepository.get().getProperty(EmpDept.T_EMPLOYEE, EmpDept.EMPLOYEE_COMMISSION),
-            txt, "", true, LinkType.READ_WRITE, null);
+            txt, true, LinkType.READ_WRITE, null);
     assertNull("Initial Double value should be null", model.getValue(EmpDept.EMPLOYEE_COMMISSION));
     txt.setDouble(42.2);
     assertEquals("Double value should be 42.2", new Double(42.2), model.getValue(EmpDept.EMPLOYEE_COMMISSION));
@@ -64,7 +64,7 @@ public class TestEntityPropertyLink extends TestCase {
   public void testStringPropertyLink() {
     final JTextField txt = new JTextField();
     new TextPropertyLink(model, EntityRepository.get().getProperty(EmpDept.T_EMPLOYEE, EmpDept.EMPLOYEE_NAME),
-            txt, "", true, LinkType.READ_WRITE, null);
+            txt, true, LinkType.READ_WRITE, null);
     assertNull("Initial String value should be null", model.getValue(EmpDept.EMPLOYEE_NAME));
     txt.setText("darri");
     assertEquals("String value should be 'darri", "darri", model.getValue(EmpDept.EMPLOYEE_NAME));
@@ -76,7 +76,7 @@ public class TestEntityPropertyLink extends TestCase {
     final ShortDashDateFormat format = new ShortDashDateFormat();
     final JFormattedTextField txtDate = UiUtil.createFormattedField(format.getDateMask());
     new DateTextPropertyLink(model, EntityRepository.get().getProperty(EmpDept.T_EMPLOYEE, EmpDept.EMPLOYEE_HIREDATE),
-            txtDate, "", LinkType.READ_WRITE, null, format, format.getDateMask());
+            txtDate, LinkType.READ_WRITE, null, format, format.getDateMask());
     assertNull("Initial Date value should be null", model.getValue(EmpDept.EMPLOYEE_HIREDATE));
     final Date now = new Date();
     model.uiSetValue(EmpDept.EMPLOYEE_HIREDATE, now);//hmm, why didn't txtDate.setText(format.format(now)) work?
